Disable S3 TSP & IR
Change-Id: Id7f10f0f09ac2a3602ff30d9748de645119e5fe3

--- a/arch/arm/configs/msm8226-sec_matissewifi_defconfig
+++ b/arch/arm/configs/msm8226-sec_matissewifi_defconfig
@@ -36,13 +36,6 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_LEDS_GPIO=y
 
 #TSP
-#CONFIG_TOUCHSCREEN_MMS252 is not set
-#CONFIG_TOUCHSCREEN_BCMTCH15XXX is not set
-#CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
-CONFIG_KEYBOARD_CYPRESS_TOUCHKEY_S3=y
-CONFIG_TOUCHSCREEN_MMS144=y
-
-#TSP
 CONFIG_TOUCHSCREEN_ATMEL_MXT1188S=y
 
 #SENSOR
@@ -87,7 +80,7 @@ CONFIG_USB_NET_SMSC95XX=y
 CONFIG_SM5502_MUIC=y
 
 # IRDA support
-CONFIG_IR_REMOCON_MC96FR116=y
+# CONFIG_IR_REMOCON_MC96FR116=y
 
 #Battery charging & BMS
 CONFIG_BATTERY_SAMSUNG=y
