--- a/arch/arm/configs/msm8226-sec_matissewifi_defconfig
+++ b/arch/arm/configs/msm8226-sec_matissewifi_defconfig
@@ -99,3 +99,19 @@ CONFIG_SEC_THERMISTOR=y
 # Earjack
 CONFIG_SAMSUNG_JACK=y
 
+# NFS/CIFS
+CONFIG_NLS=y
+CONFIG_NLS_DEFAULT="iso8859-1"
+CONFIG_NLS_ISO8859_1=y
+CONFIG_NLS_UTF8=y
+CONFIG_NETWORK_FILESYSTEMS=y
+CONFIG_NFS_COMMON=y
+CONFIG_NFS_ACL_SUPPORT=y
+CONFIG_NFS_FS=y
+CONFIG_NFS_V3=y
+CONFIG_NFS_V3_ACL=y
+CONFIG_NFS_V4=y
+CONFIG_NFS_DIRECTIO=y
+CONFIG_LOCKD=y
+CONFIG_LOCKD_V4=y
+CONFIG_CIFS=y
