--- a/arch/arm/configs/msm8226-sec_defconfig
+++ b/arch/arm/configs/msm8226-sec_defconfig
@@ -86,6 +86,7 @@ CONFIG_ENABLE_VMALLOC_SAVING=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CP_ACCESS=y
 CONFIG_USE_OF=y
+CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
