Kernel GZIP Compression

--- a/arch/arm/configs/msm8226-sec_defconfig
+++ b/arch/arm/configs/msm8226-sec_defconfig
@@ -588,8 +588,8 @@ CONFIG_EXTEND_SERIAL_NUM_16=y
 #
 # Compression
 #
-# CONFIG_KERNEL_GZIP is not set
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_GZIP=y
+#CONFIG_KERNEL_LZO=y
 
 #
 # IO Schedulers
